JRJdk13Compilerに関するメッセージへの対応